welcome.lessons.welcome.methods.picture.PictureMono3.scala.code
def marquePage{
  baisseBrosse()
  leveBrosse()
}


def faireV{
  marquePage
  avance()
  gauche()
  avance()
  marquePage
  recule()
  droite()
  avance()
  marquePage
  avance()
  avance()
  gauche()
  avance()
  avance()
  
}


def faireMotif {
  for (compteur<-1 to 3){
    avance()
    avance()
    for (compteur<-1 to 4){
      faireV
    }
    recule()
    recule()
    for (compteur<-1 to 7){
      avance()
    }
  }
}


def remettrePosition{
  for (compteur<-1 to 21){
  	recule()
  }
  gauche()
  for (compteur<-1 to 7){
  	avance()
  }
  droite()
}







def faireCode1{
  for (compteur<-1 to 9){
  	faireMotif
  	remettrePosition 
  for (compteur<-1 to 21){
    avance()
  }
  }
}


override def run() {
  faireCode1
  }
}